Some implementation issues:
- Overflowing content
- Logo needs to be centered
- Font rendering issues
- Mobile landscape needs padding

--- a/root/static/css/content.css
+++ b/root/static/css/content.css
@@ -5605,7 +5605,7 @@ h1 + .intro, .intro--mg {
 
 @media only screen and (max-width: 788px) {
   .site-main .content-wrap {
-    width: 98%; }
+    min-width: 100%; }
   .topmsg {
     zoom: 0.85; }
   .site-header .user-avatar {
@@ -5839,6 +5839,7 @@ h1 + .intro, .intro--mg {
   font-size: 1.2em;
   padding-left: 30px;
   padding-top: 7px;
+  position: relative;
   color: #aaaaaa; }
 
 .ddgsi-comment.has-notification:after {
@@ -5851,11 +5852,14 @@ h1 + .intro, .intro--mg {
   height: 6px;
   background: #60a5da;
   border-radius: 50%;
-  position: relative;
-  bottom: 9px;
-  right: 5px;
+  position: absolute;
+  bottom: 12px;
+  right: -2px;
   border: 1px solid white;
   visibility: hidden; }
+
+.desktop .ddgsi-comment:after {
+  bottom: 9px; }
 
 .modal--popout--bottom.modal--popout--sm .modal__box {
   left: -60px; }
