--- a/src/scss/content/_notification.scss
+++ b/src/scss/content/_notification.scss
@@ -4,6 +4,7 @@
 	font-size: 1.2em;
 	padding-left: 30px;
 	padding-top: 7px;
+	position: relative;
 	color: $grey-light;
     }
 
@@ -20,11 +21,17 @@
 	height: 6px;
 	background: $blue-light;
 	border-radius: 50%;
-	position: relative;
-	bottom: 9px;
-	right: 5px;
+	position: absolute;
+	bottom: 12px;
+	right: -2px;
 	border: 1px solid white;
 	visibility: hidden;
+    }
+}
+
+.desktop {
+    .ddgsi-comment:after {
+	bottom: 9px;
     }
 }
 
